--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
         <div class="your-team">
             <section id="team">
+                <h1>Team Pick</h1>
                 <ul id="slots" class="pokemon-list">
                     <li>
                         <div class="image">
