--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src=""></script>
+    <link href="http://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet" />
+    <script src="script.js" defer></script>
     <title>Pokemon Team Builder</title>
   </head>
   <body>
@@ -21,87 +22,27 @@
           </h1>
         </div>
         <p>Use our team planner to create the best pokemon team ever!</p>
-        <div class="search-box">
+        <form id="search-form">
           <input
             type="text"
+            name="search"
             id="search"
             class="search"
             placeholder="Search for pokemon..."
-            name="Search"
           />
           <button type="submit"><i id="search-icon"></i></button>
-        </div>
+        </form>
       </header>
-      <div class="your-team">
+      <div id="your-team">
         <section id="team">
           <h1>Team Pick</h1>
           <ul id="slots" class="pokemon-list">
-            <li class="card">
-              <h2 class="name">Pikachu</h2>
-              <div class="image">
-                <img
-                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
-                />
-              </div>
-              <div class="info">
-                <span class="yellow">Electric</span>
-              </div>
-            </li>
-            <li class="card">
-              <h2 class="name">Pikachu</h2>
-              <div class="image">
-                <img
-                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
-                />
-              </div>
-              <div class="info">
-                <span class="yellow">Electric</span>
-              </div>
-            </li>
-            <li class="card">
-              <h2 class="name">Pikachu</h2>
-              <div class="image">
-                <img
-                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
-                />
-              </div>
-              <div class="info">
-                <span class="yellow">Electric</span>
-              </div>
-            </li>
-            <li class="card">
-              <h2 class="name">Pikachu</h2>
-              <div class="image">
-                <img
-                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
-                />
-              </div>
-              <div class="info">
-                <span class="yellow">Electric</span>
-              </div>
-            </li>
-            <li class="card">
-              <h2 class="name">Pikachu</h2>
-              <div class="image">
-                <img
-                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
-                />
-              </div>
-              <div class="info">
-                <span class="yellow">Electric</span>
-              </div>
-            </li>
-            <li>
-              <div class="image">
-                <figure>
-                  <img />
-                </figure>
-              </div>
-              <div class="info">
-                <span class="name"></span>
-                <span class="type"></span>
-              </div>
-            </li>
+            <li class="card empty"></li>
+            <li class="card empty"></li>
+            <li class="card empty"></li>
+            <li class="card empty"></li>
+            <li class="card empty"></li>
+            <li class="card empty"></li>
           </ul>
         </section>
       </div>
